--- a/views/list.ejs
+++ b/views/list.ejs
@@ -13,7 +13,7 @@
     </form>
     <% }) %>
     <form method="POST" class="item" action="/">
-        <input type="text" name="newNote" placeholder="New Item" autocomplete="off">
+        <input type="text" name="newNote" placeholder="New Item" autocomplete="off" required>
         <button type="submit" name="list" value="<%=title%>">+</button>
     </form>
 </div>
